Revision, Linked list and Array List